plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.1'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.reborn'
version = '0.0.1-SNAPSHOT'

// Java 설정
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

// 컴파일러 설정
configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

// 레포지토리 설정
repositories {
    mavenCentral()
    maven { url 'https://repo.spring.io/release' }
    maven { url 'https://jitpack.io' }
}

// 의존성 설정
dependencies {
    // Spring Boot Starters
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'

    // Spring Cloud AWS
    implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'

    // JSON Processing
    implementation 'org.json:json:20231013'

    // Redis
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'

    // OpenAPI/Swagger
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'

    // JWT
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

    // Database and Hibernate
    runtimeOnly 'com.mysql:mysql-connector-j'
    implementation 'org.hibernate.orm:hibernate-core:6.2.7.Final'

    // To use Google Map API
    implementation 'com.google.api-client:google-api-client:1.33.2'
    implementation 'com.google.maps:google-maps-services:0.18.1'

    // Firebase FCM and HTTP Client
    implementation 'com.google.firebase:firebase-admin:9.2.0'
    implementation 'com.squareup.okhttp3:okhttp:4.9.3'
    implementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.13'
    implementation 'org.apache.bcel:bcel:6.10.0'

    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // Development Tools
    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    // Testing
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation 'io.projectreactor:reactor-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // Env
    implementation 'io.github.cdimascio:dotenv-java:3.0.0'

    //chat
    implementation 'org.webjars:stomp-websocket:2.3.4'
    implementation 'org.webjars:sockjs-client:1.5.1'
    implementation 'org.springframework.boot:spring-boot-starter-websocket:3.4.5'
    implementation 'org.bouncycastle:bcprov-jdk15on:1.70'
}

// 테스트 플랫폼
tasks.named('test') {
    useJUnitPlatform() // JUnit 5를 사용하여 테스트 실행
}

// 일반 jar 생성 비활성화 (bootJar만 생성)
tasks.named('jar') {
    enabled = false
}